--- a/Code/main/index.html
+++ b/Code/main/index.html
@@ -14,6 +14,7 @@
     <script src="../p5.min.js"></script>
     <script src="../addons/p5.dom.min.js"></script>
     <script src="../addons/p5.sound.min.js"></script>
+    <script src="classes/qtree.js"></script>
     <script src="classes/world.js"></script>
     <script src="classes/particle.js"></script>
     <script src="sketch.js"></script>
